Changes for faraday
===============================================================================

TODO:
- make B-field inside the magnet appear to move with the magnet [351]
- get approval for licensing of earth.png [443]
- add "constant voltage source" feature [437]
- rotate coil or magnet [79]
- improve collision detection [283]
- convert model from Observer to Listener pattern

DONE:
4/1/08 - change lightbulb min alpha=0.35 and light glow scale=15 throughout [488]
********* version 1.05.08 (20467)
3/31/08 - make Earth image smaller to match Kathy's mockup [443]
3/31/08 - for bar magnet, make compass grid use B-field slightly outside magnet's 2D plan to prevent needles from flipping [424] 
********* version 1.05.07 (20456)
3/31/08 - add "Show Earth" feature to magnet-and-compass and magnets-and-electromagnets flavors [443]
3/31/08 - make faraday into multiple flavors: faraday, magnets-and-compass, magnets-and-electromagnets, generator [442]
********* version 1.05.06 (20441)
3/28/08 - add developer control for setting scaling factor to calibrate how much the lightbulb glows [420]
3/28/08 - add developer control for setting the min value for the lightbulb's alpha channel [420]
3/28/08 - make lightbulb glow by modulating alpha channel of lightbulb glass to correspond to intensity [420]
3/28/08 - separate lightbulb image into glass, cap and base components [420]
3/28/08 - change red voltmeter probe to white [423] 
********* version 1.05.05 (20430)
3/27/08 - absorb controls from DeveloperControlsDialog into DeveloperControlsPanel
3/27/08 - clean up pickup coil flux display 
3/27/08 - add message to DeveloperControlsPanel indicating these controls will not be reset by Reset All
3/27/08 - absorb ScalePanel into DeveloperControlsPanel
3/27/08 - create DeveloperControlsPanel for all developer controls that appear in ControlPanel [248]
3/27/08 - make VariableNumberOfSamplePointsStrategy the permanent strategy [248]