@@ -11,6 +11,8 @@ TODO:
 - convert model from Observer to Listener pattern
 
 DONE:
+4/1/08 - change Earth transparency from 0.65 to 0.75 [443]
+4/1/08 - put Earth in top-most layer, in front of magnet, compass and field meter [443]
 4/1/08 - change lightbulb min alpha=0.35 and light glow scale=15 throughout [488]
 ********* version 1.05.08 (20467)
 3/31/08 - make Earth image smaller to match Kathy's mockup [443]
